# UMBC-DATA606-Capstone

./: .env.example  .gitattributes  .gitignore  DEVELOPMENT.md  IMPROVEMENTS.md  pyproject.toml  requirements.txt  requirments.txt  snowflakecli.toml
.github/workflows/: tests.yml
Scripts/: download_data.py  load_data.py
blockchair_wallet_classification/: dbt_project.yml
blockchair_wallet_classification/models/analytics/: fct_wallet_daily_features.sql  schema.yml  wallet_classification.sql
blockchair_wallet_classification/models/core/: schema.yml  transaction_summary.sql  wallet_activity.sql
blockchair_wallet_classification/models/staging/: stg_addresses.sql  stg_blocks.sql  stg_inputs.sql  stg_outputs.sql  stg_transactions.sql
docs/: Proposal.md  README.md  Resume.md
notebooks/: addresses.ipynb  blocks.ipynb  inputs.ipynb  ml_classification.py  ml_wallet_classification.ipynb  ml_wallet_classification_updated.py  outputs.ipynb  transactions.ipynb
sql/: addresses.sql  blocks.sql  copy_to_table.sql  file_format.sql  inputs.sql  outputs.sql  put_data.sql  stage.sql  transactions.sql
utils/: config_loader.py
